objects/Month_KPI__c/Month_KPI__c.object-meta.xml
<CustomObject>
    <label>Month KPI</label>
    <nameField>
        <label>Month KPI</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Month KPIs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>