objects/Month_KPI__c/fields/Count_IDV_KPI__c.field-meta.xml
<CustomField>
    <fullName>Count_IDV_KPI__c</fullName>
    <label>Count IDV KPI</label>
    <summaryForeignKey>Individual_KPI__c.Month_KPI_ID__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>