objects/Month_KPI__c/fields/KPI_Management_Name__c.field-meta.xml
<CustomField>
    <fullName>KPI_Management_Name__c</fullName>
    <label>KPI Management Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>