objects/Month_KPI__c/fields/KPIManagementID__c.field-meta.xml
<CustomField>
    <fullName>KPIManagementID__c</fullName>
    <label>KPI Management ID</label>
    <referenceTo>KPI_Management__c</referenceTo>
    <relationshipLabel>Month KPIs</relationshipLabel>
    <relationshipName>Month_KPIs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>