objects/Month_KPI__c/fields/Month_KPI_Completed_Rate__c.field-meta.xml
<CustomField>
    <fullName>Month_KPI_Completed_Rate__c</fullName>
    <formula>Month_KPI_Profit_Achieved_Amount__c / Month_KPI_Profit_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month KPI Completed Rate</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Percent</type>
</CustomField>