objects/Month_KPI__c/fields/Month_KPI_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Month_KPI_End_Date__c</fullName>
    <label>Month KPI End Date</label>
    <type>Date</type>
</CustomField>