objects/Month_KPI__c/fields/Month_KPI_Profit_Achieved_Amount__c.field-meta.xml
<CustomField>
    <fullName>Month_KPI_Profit_Achieved_Amount__c</fullName>
    <label>Month KPI Profit Achieved Amount</label>
    <summarizedField>Individual_KPI__c.IndividualMonthKPIProfitAchieved__c</summarizedField>
    <summaryForeignKey>Individual_KPI__c.Month_KPI_ID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>