objects/Month_KPI__c/fields/Month_KPI_Profit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Month_KPI_Profit_Amount__c</fullName>
    <label>Month KPI Profit Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>