objects/Month_KPI__c/fields/Month_KPI_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Month_KPI_Start_Date__c</fullName>
    <label>Month KPI Start Date</label>
    <type>Date</type>
</CustomField>