objects/Month_KPI__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>KPIManagementID__c</columns>
    <columns>KPI_Management_Name__c</columns>
    <columns>NAME</columns>
    <columns>Month_KPI_Start_Date__c</columns>
    <columns>Month_KPI_End_Date__c</columns>
    <columns>Month_KPI_Profit_Amount__c</columns>
    <columns>Month_KPI_Completed_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>